== 3.5.1.1 ==

* Fixed: when using PayPal Single Payments the member's existing subscription is not being dropped after upgrading
* Fixed: stranger access level some times isn't being determined correctly
* Fixed: subscriptions are not being dropped after member cancels their subscription with PayPal
* Fixed: on subscription screen the member's subscription expiration date is always the current date
* Added: IPN setup instructions on PayPal gateways settings screens
* Added: ability to add/move/drop access levels. NOTE: this feature will only be available when there are no subscriptions in the system

== 3.5.1 ==

* Fixed: pings don't send when using "Default subscription for registered users" setting
* Fixed: default membership is not truly added as a subscription http://wp.mu/94f
* Fixed: date format in settings not being used on subscriptions page
* Fixed: streamlined PayPal checkout process (will no longer request shipping address or notes)
* Fixed: PHP warning in free subscription gateway
* Fixed: when using PayPal Single Payments the member's existing subscription is not being dropped after upgrading

== 3.5.0.9 ==

*	Fixed: super admins and admins not able to view all content
*	Fixed: "view site as" not working when on front-end pages
*	Fixed: if using admin gateway and member clicks unsubscribe their subscription is instantly dropped instead of being flagged to expire at the subscription end period NOTE: if admin drops a member’s subscription from within wp-admin this will still instantly drop the member’s subscription.

== 3.5.0.8 ==

* Fixed: BuddyPress bug where first name and last name weren't saved correctly
* Fixed: CSS styling on renew form when using [renewform] shortcode
* Fixed: bug with category rules hiding some member's menus
* Fixed: call to undefined method Membership_Render_Page_Subscription_Renew::get_subscriptions() on renew form
* Fixed: BuddyPress compatability issues
* Fixed: bug with membership blocking Classifieds plugin virtual pages